clusters/my-cluster/infrastructure/monitoring/kube-prometheus-stack/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    hajimari.io/icon: simple-icons:grafana
spec:
  ingressClassName: traefik
  rules:
  - host: grafana.cleoverse.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kube-prometheus-stack-grafana
            port:
              number: 80
